Sun Apr 16 10:11:32 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h src/tds/locale.c src/tds/mem.c:
	- TDSLOCALE changes to keep ABI

Sat Apr 15 10:18:29 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tdsconvert.h 	* src/tds/convert.c:
	- add new type of conversion for copy optimizations

Sat Apr 15 10:02:20 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c: fix for older Sybase versions
	* src/tds/config.c: optimize option read

Sat Apr 15 09:03:34 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c: remove warning

Fri Apr 14 15:22:02 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c:
	- improved

Fri Apr 14 13:55:09 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/describecol.c:
	- add test for precision returned by SQLDescribeCol

Wed Apr 12 21:41:51 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* locales.conf: fix charset typo
	* doc/userguide.sgml: fix attributes for locales.conf

Wed Apr 12 15:53:18 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds.h include/tds_sysdep_private.h:
	* include/tds_sysdep_public.h.in include/tdsconvert.h:
	* include/tdsver.h.in:
	- avoid ident strings in all objects
	* m4/sprintf_i64_format.m4: add Ld format

Tue Apr 11 16:33:41 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* include/tds_sysdep_public.h.in include/tdsver.h.in:
	- small constification

Tue Apr 11 13:51:43 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/unittests/connect.c: do not fail if not FreeTDS
	* src/odbc/unittests/raiserror.c: more verbose

Mon Apr 10 18:14:17 EDT 2006	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/apps/tsql.c src/tds/config.c
	- report sysconfdir with tsql -C

Mon Apr 10 11:59:53 CET 2006    Frediano Ziglio <freddyz77_A_lycos_D_com>
	* src/odbc/odbc.c: cleanup
